# FileCompressor

./: .gitignore  CMakeLists.txt  file.txt
include/: CompressionManager.h  CompressionManagerFactory.h  Compressor.h  FileCompressor.h  FileDecompressor.h  ICompressor.h  RARCompressor.h  ZIPCompressor.h  compress.h
src/: CompressionManager.cpp  CompressionManagerFactory.cpp  Compressor.cpp  Decompressor.cpp  Decompressor.h  FileCompressor.cpp  FileCompressor.h  FileDecompressor.cpp  FileDecompressor.h  ICompressor.cpp  Main.cpp  RARCompressor.cpp  ZIPCompressor.cpp  compress.cpp
